[metadata]
name = pyHexDump
version = attr: pyHexDump.version.__version__
description = A CLI tool to dump data from e.g. intel hex files and is able to generate reports.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/BlueAndi/pyHexDump
author = Andreas Merkle
author_email = web@blue-andi.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://github.com/BlueAndi/pyHexDump
    Source = https://github.com/BlueAndi/pyHexDump
    Tracker = https://github.com/BlueAndi/pyHexDump/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    intelhex >= 2.3.0
    Mako >= 1.2.2
    toml >= 0.10.2
python_requires = >=3.8
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyHexDump = pyHexDump.__main__:main
